# IteratorDesignPattern

./: CMakeLists.txt  README.md  main.cpp  run.sh
concrete-iterators/: CommentCountIterator.cpp  CommentCountIterator.h  DefaultIterator.cpp  DefaultIterator.h  TimestampIterator.cpp  TimestampIterator.h  ViewCountIterator.cpp  ViewCountIterator.h
iterator/: Iterator.h  List.h
sorting-algorithms/: quicksort.cpp  quicksort.h
video/: User.cpp  User.h  Video.cpp  Video.h  VideoContainer.cpp  VideoContainer.h
